helt masse arbejde der skal gemmes

--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rosalinas Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amethysta&family=DM+Serif+Text:ital@0;1&family=Fresca&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Mountains+of+Christmas:wght@400;700&family=Namdhinggo:wght@400;500;600;700;800&family=Tagesschrift&family=Twinkle+Star&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"></head>
 <body>
 <header>
     <h1>Rosalina Hoff Kjærgaard</h1>
 </header>
 <section class="under-header">
-    <nav>
-        <ul>
+    <nav class="real-nav">
+        <ul class="nav-bar">
             <li>
-                <a href="index.html">Forside</a>
+                <a class="nav-link" href="index.html">Forside</a>
             </li>
             <li>
-                <a href="uddannelser.html">Uddannelser</a>
+                <a class="nav-link" href="uddannelser.html">Uddannelser</a>
             </li>
             <li>
-                <a href="job.html">Job</a>
+                <a class="nav-link" href="job.html">Job</a>
             </li>
             <li>
-                <a href="krea.html">Krea</a>
+                <a class="nav-link" href="krea.html">Krea</a>
             </li>
         </ul>
     </nav>
@@ -60,8 +61,8 @@
 
         <footer>
 
-            <p>Kontakt mig som udgangpunkt her: <strong> rosalinahokj@gmail.com </strong></p>
-            <p>Hvis det haster: <strong>+45 4276 6245</strong></p>
+            <p>Kontakt mig som udgangpunkt her: <a class="contact" href="mail-to: rosalinahokj@gmail.com"><strong> rosalinahokj@gmail.com </strong></a></p>
+            <p>Hvis det haster: <a class="contact" href="tel:+4542766245"> <strong>+45 4276 6245</strong></a></p>
 
         </footer>
 </section>
