--- a/job.html
+++ b/job.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Job</title>
+    <link rel="stylesheet" href="job-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amethysta&family=DM+Serif+Text:ital@0;1&family=Fresca&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Mountains+of+Christmas:wght@400;700&family=Namdhinggo:wght@400;500;600;700;800&family=Tagesschrift&family=Twinkle+Star&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"></head>
+
 </head>
 <body>
 <header>
@@ -11,7 +16,7 @@
 </header>
 <section class="under-header">
     <nav>
-        <ul>
+        <ul class="nav-bar">
             <li>
                 <a href="index.html">Forside</a>
             </li>
@@ -27,22 +32,24 @@
         </ul>
     </nav>
     <main>
+        <h2>Nuværende job</h2>
+        <ul>
+            <li>Vikar i Transformerens vuggestue og børnehave</li>
+            <li>Privat barnepige</li>
+        </ul>
 
-        <section class="krea">
-            <h2>Her kan du se nogle af de projekter som jeg har lavet</h2>
-            <p> I hvert fald dem jeg har billeder af</p>
-
-        </section>
-
-
+<h2> Tidligere jobs</h2>
+        <ul>
+            <li>2024- 2025	Pædagogmedhjælper i Transformerens vuggestue</li>
+            <li>2023		Pædagogmedhjælper i Ønskeøens børnehave</li>
+            <li>2021		Skolefotograf hos Rosenfeldt</li>
+        </ul>
         <footer>
 
             <p>Kontakt mig som udgangpunkt her: <strong> rosalinahokj@gmail.com </strong></p>
             <p>Hvis det haster: <strong>+45 4276 6245</strong></p>
 
         </footer>
-</section>
-
 </main>
 
 
