--- a/uddannelser.html
+++ b/uddannelser.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Uddannelser</title>
+    <link rel="stylesheet" href="uddannelser-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amethysta&family=DM+Serif+Text:ital@0;1&family=Fresca&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Mountains+of+Christmas:wght@400;700&family=Namdhinggo:wght@400;500;600;700;800&family=Tagesschrift&family=Twinkle+Star&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"></head>
+
 </head>
 <body>
 <header>
@@ -11,7 +16,7 @@
 </header>
 <section class="under-header">
     <nav>
-        <ul>
+        <ul class="nav-bar">
             <li>
                 <a href="index.html">Forside</a>
             </li>
@@ -27,34 +32,17 @@
         </ul>
     </nav>
     <main>
+        <h2>Nuværende uddannelse</h2>
+        <ul>
+            <li>IT-arkitektur på Erhvervsakademi København (EK)</li>
+        </ul>
 
-        <section class="om-mig">
-            <h2>Lidt om mig</h2>
-            <p>Hej, jeg hedder Rosalina. Jeg er en 23-årig kvinde, der bor i København. Jeg går til hverdag på EK og
-                studerer IT-arkitektur. I min fritid laver jeg forskelligt håndarbejde, spiller brætspil og synger i kor.
-                Jeg er kendt for at være i gang med en masse projekter, have de bedste venner og min kærlighed til
-                katte.</p>
-            <section id="mig"><img src="billede_af_mig.jpg" alt="Billede af Rosalina Hoff Kjærgaard"></section>
-
-        </section>
-        <div class="divider">
-
-        </div>
-
-        <section class="creations">
-            <h2>Highlights af mine kreationer</h2>
-            <p>
-                Jeg både strikker, hækler, syr, laver smykker, papirsblomster, keramik og alt andet jeg kan få fingrene i. Jeg deler lige lidt billeder af mine favoritter, og så er der flere at finde ude i siden.
-            </p>
-            <section class="pictures">
-                <img src="blad-cardigan.jpg" alt="Strikket grøn cardigan med et mønster der ligner blade"> </img>
-                <img src="keramik-huse.jpg" alt="Fire huse af stentøj der er lavet til forskellige krydderier"> </img>
-                <img src="grøn-mini.jpg" alt="Miniature figur til Dungeons and Dragons der er malet i hånden"> </img>
-
-            </section>
-
-        </section>
-
+        <h2> Tidligere uddannelser</h2>
+        <ul>
+            <li>2023	Teaterhøjskole på Ryslinge Højskole</li>
+            <li>2021	Gymnasial eksamen fra Aurehøj Gymnasium STX</li>
+            <li>2018	Grundskoleeksamen fra N. Zahles Gymnasieskole</li>
+        </ul>
 
         <footer>
 
