--- a/krea.html
+++ b/krea.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Krea</title>
+    >
+    <link rel="stylesheet" href="krea-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amethysta&family=DM+Serif+Text:ital@0;1&family=Fresca&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Mountains+of+Christmas:wght@400;700&family=Namdhinggo:wght@400;500;600;700;800&family=Tagesschrift&family=Twinkle+Star&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"></head>
+
 </head>
 <body>
 <header>
@@ -11,7 +17,7 @@
 </header>
 <section class="under-header">
     <nav>
-        <ul>
+        <ul class="nav-bar">
             <li>
                 <a href="index.html">Forside</a>
             </li>
@@ -33,8 +39,6 @@
             <p> I hvert fald dem jeg har billeder af</p>
 
         </section>
-    </main>
-
         <footer>
 
             <p>Kontakt mig som udgangpunkt her: <strong> rosalinahokj@gmail.com </strong></p>
@@ -42,7 +46,7 @@
 
         </footer>
 </section>
-
+    </main>
 
 
 
