det sidste til aflevering

--- a/job.html
+++ b/job.html
@@ -46,8 +46,8 @@
         </ul>
         <footer>
 
-            <p>Kontakt mig som udgangpunkt her: <strong> rosalinahokj@gmail.com </strong></p>
-            <p>Hvis det haster: <strong>+45 4276 6245</strong></p>
+            <p>Kontakt mig som udgangpunkt her: <a class="contact" href="mail-to: rosalinahokj@gmail.com"><strong> rosalinahokj@gmail.com </strong></a></p>
+            <p>Hvis det haster: <a class="contact" href="tel:+4542766245"> <strong>+45 4276 6245</strong></a></p>
 
         </footer>
 </main>
