--- a/krea.html
+++ b/krea.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krea</title>
-    >
     <link rel="stylesheet" href="krea-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,12 +36,22 @@
         <section class="krea">
             <h2>Her kan du se nogle af de projekter som jeg har lavet</h2>
             <p> I hvert fald dem jeg har billeder af</p>
+<section class="pics-of-art">
+    <img src="handske-til-bjørn.jpg" alt="Billede af en selv-selvstrikket grå håndledsvarmer"> </img>
+    <img src="magisk-blomst.jpg" alt="Billede af en stor papirblomst der er hvis-gul med guldglimmer"> </img>
+    <img src="ork.jpg" alt="Billede af en selv-malet miniature ork"> </img>
+    <img src="grøn-mini.jpg" alt="Billede af et selv-malet miniature menneske"> </img>
+    <img src="fe-halskæde.jpg" alt="Billede af en halskæde med grønne halv-ædelsten og gyldne vedhæng"> </img>
+    <img src="blaa-drage.jpg" alt="Billede af en selv-malet blå miniature drage"> </img>
+    <img src="blad-cardigan.jpg" alt="Billede af en selv-strikket grøn cardingan med et mønster der ligner blade"> </img>
+</section>
+
 
         </section>
         <footer>
 
-            <p>Kontakt mig som udgangpunkt her: <strong> rosalinahokj@gmail.com </strong></p>
-            <p>Hvis det haster: <strong>+45 4276 6245</strong></p>
+            <p>Kontakt mig som udgangpunkt her: <a class="contact" href="mail-to: rosalinahokj@gmail.com"><strong> rosalinahokj@gmail.com </strong></a></p>
+            <p>Hvis det haster: <a class="contact" href="tel:+4542766245"> <strong>+45 4276 6245</strong></a></p>
 
         </footer>
 </section>
