removed unused css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Rosalina Hoff Kjærgaard</h1>
 </header>
 <section class="under-header">
-    <nav class="real-nav">
+    <nav>
         <ul class="nav-bar">
             <li>
                 <a class="nav-link" href="index.html">Forside</a>
@@ -31,7 +31,7 @@
     </nav>
     <main>
 
-<section class="om-mig">
+<section>
     <h2>Lidt om mig</h2>
     <p>Hej, jeg hedder Rosalina. Jeg er en 23-årig kvinde, der bor i København. Jeg går til hverdag på EK og
         studerer IT-arkitektur. I min fritid laver jeg forskelligt håndarbejde, spiller brætspil og synger i kor.
@@ -50,7 +50,7 @@
         Jeg både strikker, hækler, syr, laver smykker, papirsblomster, keramik og alt andet jeg kan få fingrene i. Jeg deler lige lidt billeder af mine favoritter, og så er der flere at finde ude i siden.
     </p>
 <section class="pictures">
-<img src="blad-cardigan.jpg" alt="Strikket grøn cardigan med et mønster der ligner blade"> </img>
+    <img src="blad-cardigan.jpg" alt="Strikket grøn cardigan med et mønster der ligner blade"> </img>
     <img src="keramik-huse.jpg" alt="Fire huse af stentøj der er lavet til forskellige krydderier"> </img>
     <img src="grøn-mini.jpg" alt="Miniature figur til Dungeons and Dragons der er malet i hånden"> </img>
 
