--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amethysta&family=DM+Serif+Text:ital@0;1&family=Fresca&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Mountains+of+Christmas:wght@400;700&family=Namdhinggo:wght@400;500;600;700;800&family=Tagesschrift&family=Twinkle+Star&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Amethysta&family=DM+Serif+Text:ital@0;1&family=Fresca&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Mountains+of+Christmas:wght@400;700&family=Namdhinggo:wght@400;500;600;700;800&family=Tagesschrift&family=Twinkle+Star&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+</head>
 <body>
 <header>
     <h1>Rosalina Hoff Kjærgaard</h1>
